[package]
name = "shortpaths"
version = "0.1.0"
edition = "2021"
autotests = false

[[test]]
name = "shortpaths"
path = "test/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
const_format = "0.2.30"
derivative = "2.2.0"
directories = "4.0.1"
dirs = "4.0.0"
indexmap = { version = "1.9.2", features = ["serde", "serde-1"] }
itertools = "0.10.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
toml = { version = "0.5.10", features = ["preserve_order", "indexmap"] }
walkdir = "2.3.2"
